--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <router-outlet></router-outlet>
-<div class="container container-fluid">
-<footer><p class="mt-5 mb-3 text-muted text-center">The Dream Company &copy; 2019 | All Rights Reserved</p></footer>
-</div>
+<app-footer></app-footer>
