--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
+<app-banner></app-banner>
 <div class="container container-fluid">
-    <h1>welcome Admin</h1>
-    <button class="btn btn-lg btn-primary btn-block" (click)="logout()">Sign out</button>
+    <p>lat {{ lat }}</p>
+    <p>long {{ long }}</p>
 </div>
+
+  
