--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -5,7 +5,7 @@
         <h1>Dream Company</h1>
       </div>
       <div class="col-sm">
-        <button class="btn btn-primary">Sign Out</button>
+        <button class="btn btn-primary"(click)="signout()">Sign Out</button>
       </div>
     </div>
   </div>
